Adding comments to the code

--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,7 @@
     </head>
     <body>
         <header>
+            <!-- using navbar lib from bootstrap-->
 			<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
@@ -40,7 +41,7 @@
 		</header>
 
         <div class="container">
-
+            <!-- ng-view view controlled by angularJS-->
             <div ng-view></div>
 
 		</div>
