--- a/directives/weatherReport.html
+++ b/directives/weatherReport.html
@@ -1,5 +1,8 @@
+
+<!-- using bootstrap panels to look nice-->
 <div class="panel panel-default">
     <div class="panel-heading">
+        <!-- Interpolating weather data and convert date format in to readable-->
         <h3 class="panel-title">{{ convertToDate({ dt: weatherDay.dt }) | date: dateFormat }}</h3>
     </div>
     <div class="panel-body">
